# aurorastack-core

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: dispatch_daily_build.yaml  dispatch_release.yaml  dispatch_sync_ci.yaml
src/aurorastack/core/: base.py  command.py  error.py  locator.py  manager.py  token.py  transaction.py
src/aurorastack/core/auth/jwt/: __init__.py
src/aurorastack/core/cache/: __init__.py  local_cache.py  redis_cache.py
src/aurorastack/core/config/: __init__.py  default_conf.py
src/aurorastack/core/connector/: __init__.py  aurora_connector.py
src/aurorastack/core/fastapi/: __init__.py  api.py  server.py
src/aurorastack/core/handler/: __init__.py  authentication_handler.py  authorization_handler.py  mutation_handler.py
src/aurorastack/core/logger/: __init__.py
src/aurorastack/core/logger/filters/: __init__.py  transaction.py
src/aurorastack/core/model/: __init__.py
src/aurorastack/core/model/mongo_model/: __init__.py  filter_operator.py  stat_operator.py
src/aurorastack/core/opentelemetry/: __init__.py  metrics.py  tracer.py
src/aurorastack/core/plugin/: __init__.py  plugin_conf.py  server.py
src/aurorastack/core/pygrpc/: .api.py.swp  __init__.py  api.py  client.py  message_type.py  server.py
src/aurorastack/core/pygrpc/extension/: grpc_health.py  server_info.py
src/aurorastack/core/queue/: __init__.py  redis_queue.py
src/aurorastack/core/scheduler/: __init__.py  scheduler.py  server.py  task_schema.py  worker.py
src/aurorastack/core/service/: __init__.py  utils.py
src/aurorastack/core/skeleton/conf/: global_conf.py
src/aurorastack/core/skeleton/info/: helloworld_info.py
src/aurorastack/core/skeleton/interface/grpc/: __init__.py  helloworld.py
src/aurorastack/core/skeleton/manager/: helloworld_manager.py
src/aurorastack/core/skeleton/service/: helloworld_service.py
src/aurorastack/core/unittest/: runner.py
test/: test_JWTAuthenticator.py  test_jwt_util.py  test_utils.py
