[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aurorastack"]

[project]
name = "aurorastack-core"
version = "0.0.1"
requires-python = ">=3.8"
authors = [
    {name = "Choonho Son", email = "choonho.son@advancd.ai"},
    {name = "Jongmin Kim", email = "whdalsrnt@megazone.com"},
]
maintainers = [
    {name = "Choonho Son", email = "choonho.son@advancd.ai"},
]
description = "MSA framework with kubernetes"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["MSA", "gRPC", "kubernetes", "fastapi", "scheduler", "worker"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
        # grpc packages
        'protobuf==3.*',
        # 'grpcio',
        'grpcio-reflection',
        'google-api-core',
        'grpcio-health-checking',

        # fastapi packages
        'fastapi',
        'fastapi-utils',
        'uvicorn',

        # asyncio packages
        'asyncio',

        # data parser packages
        'PyYAML',
        'jsonschema',

        # scheduler packages
        'schedule',
        'scheduler-cron',

        # cache packages
        'redis',
        'cachetools',

        # crypto(jwt) packages
        'pycryptodome',
        'jwcrypto',
        'python-jose',

        # utils packages
        'python-dateutil',
        'python-consul',
        'dnspython',

        # HTTP packages
        'requests',

        # CLI packages
        'click',

        # model packages
        'pydantic',
        'mongoengine',

        # test framework packages
        'unittest-xml-reporting',
        'factory-boy',
        'mongomock',

        # tracing packages
        'opentelemetry-api',
        'opentelemetry-sdk',
        'opentelemetry-exporter-otlp-proto-grpc',
        'opentelemetry-instrumentation-logging',
        'opentelemetry-exporter-prometheus'
]


[project.urls]
Homepage = "https://aurorastack.io"
Documentation = "https://aurorastack.io"
Repository = "https://github.com/aurorastack/aurorastack-core.git"
"Bug Tracker" = "https://github.com/aurorastack/issues"
Changelog = "https://github.com/aurorastack/aurorastack-core/blob/master/CHANGELOG.md"

[project.scripts]
aurorastack = "aurorastack.core.command:cli"
